--- a/Scholarly/templates/layout.html
+++ b/Scholarly/templates/layout.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item"><a class="nav-link" href="{{ url_for('home') }}">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Notes</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('notes') }}">Notes</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('quizzes') }}">Quizzes</a></li>
 
             {% if current_user.is_authenticated %}
