--- a/Scholarly/templates/preview_ai_notes.html
+++ b/Scholarly/templates/preview_ai_notes.html
@@ -12,7 +12,7 @@
 
   <form method="POST" class="d-flex gap-2">
     <button type="submit" name="confirm" class="btn btn-success">✅ Confirm & Save</button>
-    <a href="{{ url_for('create_ai_notes') }}" class="btn btn-secondary">🔙 Go Back</a>
+    <a href="{{ url_for('notes.create_ai_notes') }}" class="btn btn-secondary">🔙 Go Back</a>
   </form>
 </div>
 {% endblock %}
