--- a/Scholarly/templates/register.html
+++ b/Scholarly/templates/register.html
@@ -71,7 +71,7 @@
 
       <div class="border-top pt-3 text-center">
         <small class="text-muted">
-          Already have an account? <a href="{{ url_for('login') }}">Log in</a>
+          Already have an account? <a href="{{ url_for('auth.login') }}">Log in</a>
         </small>
       </div>
     </form>
