--- a/Scholarly/templates/home.html
+++ b/Scholarly/templates/home.html
@@ -19,7 +19,7 @@
       <div class="card-body">
         <h5 class="card-title">📝 Notes</h5>
         <p class="card-text">Create and organize your study notes in one place. No more clutter.</p>
-        <a href="{{ url_for('notes') }}" class="btn btn-outline-primary">Go to Notes</a>
+        <a href="{{ url_for('notes.notes') }}" class="btn btn-outline-primary">Go to Notes</a>
       </div>
     </div>
   </div>
