--- a/Scholarly/templates/layout.html
+++ b/Scholarly/templates/layout.html
@@ -26,18 +26,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('home') }}">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('notes') }}">Notes</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('quizzes') }}">Quizzes</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('general.home') }}">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('notes.notes') }}">Notes</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('quiz.quizzes') }}">Quizzes</a></li>
 
             {% if current_user.is_authenticated %}
               <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
               <li class="nav-item">
-                <a class="btn btn-outline-danger btn-sm ms-2" href="{{ url_for('logout') }}">Logout</a>
+                <a class="btn btn-outline-danger btn-sm ms-2" href="{{ url_for('auth.logout') }}">Logout</a>
               </li>
             {% else %}
-              <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
-              <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">Login</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.register') }}">Register</a></li>
             {% endif %}
           </ul>
         </div>
