--- a/Scholarly/templates/quizzes.html
+++ b/Scholarly/templates/quizzes.html
@@ -15,9 +15,9 @@
             <strong>{{ quiz.title }}</strong>
           </div>
           <div class="d-flex gap-2">
-            <a href="{{ url_for('view_quiz', quiz_id=quiz.id) }}" class="btn btn-sm btn-primary">Take Quiz</a>
-            <a href="{{ url_for('view_results', quiz_id=quiz.id) }}" class="btn btn-sm btn-info">View Results</a>
-            <form method="POST" action="{{ url_for('delete_quiz', quiz_id=quiz.id) }}" onsubmit="return confirm('Are you sure you want to delete this quiz?');">
+            <a href="{{ url_for('quiz.view_quiz', quiz_id=quiz.id) }}" class="btn btn-sm btn-primary">Take Quiz</a>
+            <a href="{{ url_for('quiz.view_results', quiz_id=quiz.id) }}" class="btn btn-sm btn-info">View Results</a>
+            <form method="POST" action="{{ url_for('quiz.delete_quiz', quiz_id=quiz.id) }}" onsubmit="return confirm('Are you sure you want to delete this quiz?');">
               <button type="submit" class="btn btn-danger btn-sm">Delete</button>
             </form>
           </div>
@@ -30,14 +30,14 @@
     <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addQuizModal">
       Create Quiz
     </button>
-    <a href="{{ url_for('quick_quiz') }}" class="btn btn-outline-secondary">
+    <a href="{{ url_for('quiz.quick_quiz') }}" class="btn btn-outline-secondary">
       Quick Quiz ⚡
     </a>
   </div>
 
 <div class="modal fade" id="addQuizModal" tabindex="-1" aria-labelledby="addQuizModalLabel" aria-hidden="true">
   <div class="modal-dialog">
-    <form class="modal-content" method="POST" action="{{ url_for('quizzes') }}">
+    <form class="modal-content" method="POST" action="{{ url_for('quiz.quizzes') }}">
       {{ form.hidden_tag() }}
 
       <div class="modal-header">
