--- a/Scholarly/templates/view_notes.html
+++ b/Scholarly/templates/view_notes.html
@@ -11,6 +11,6 @@
             <p class="card-text" style="white-space: pre-wrap;">{{ note.content }}</p>
         </div>
     </div>
-    <a href="{{ url_for('notes') }}" class="btn btn-secondary mt-3">Back to Notes</a>
+    <a href="{{ url_for('notes.notes') }}" class="btn btn-secondary mt-3">Back to Notes</a>
 </div>
 {% endblock %}
