--- a/Scholarly/templates/login.html
+++ b/Scholarly/templates/login.html
@@ -48,7 +48,7 @@
 
       <div class="border-top pt-3 text-center">
         <small class="text-muted">
-          Need an account? <a href="{{ url_for('register') }}">Register</a>
+          Need an account? <a href="{{ url_for('auth.register') }}">Register</a>
         </small>
       </div>
     </form>
