--- a/Scholarly/templates/layout.html
+++ b/Scholarly/templates/layout.html
@@ -29,6 +29,7 @@
             <li class="nav-item"><a class="nav-link" href="{{ url_for('general.home') }}">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('notes.notes') }}">Notes</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('quiz.quizzes') }}">Quizzes</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('learn.home') }}">Learn</a></li>
 
             {% if current_user.is_authenticated %}
               <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
